# fencer

./: .env  .env.prod  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: cicd.yml
infra/: api.http.json  geochecker.uml
infra/docker/hooper-grpc/: Dockerfile
infra/docker/hooper-p2p/: Dockerfile
infra/docker/hooper-tcp/: Dockerfile
infra/docker/nginx/: Dockerfile  docker.your-app.app.conf  nginx.conf
infra/docker/rustacki-geo/: Dockerfile
migration/src/: lib.rs  m20240429_082043_hyper_geo_locations.rs  m20240527_074611_geo_result.rs  m20240601_173417_line_route.rs  m20240602_092958_route_result.rs  m20240605_150651_add_inserted_at.rs
scripts/: dellog.sh  launch.sh  redeploy.sh
src/: app.rs
src/actors/: consumers.rs  mod.rs
src/actors/consumers/: location.rs  route.rs
src/actors/cqrs/: accessors.rs  mutators.rs
src/actors/cqrs/accessors/: location.rs
src/actors/cqrs/mutators/: location.rs
src/actors/producers/: location.rs  zerlog.rs
src/apis/http/v1/: events.rs
src/apis/http/v1/events/: geo.rs  line.rs
src/apis/http/v1/health/: index.rs
src/apis/ws/v1/: hoop.rs
src/appstate/: mod.rs
src/cli/: mod.rs
src/consts/: mod.rs  queries.rs
src/error/: mod.rs
src/models/: event.rs
src/s3/: mod.rs
src/server/http/: mod.rs
src/services/: events.rs
src/types/: mod.rs
